Day 5 + fix interrupts